@@ -1,3 +1,9 @@
+Thu Mar 1 13:52:00 UTC 2012  Simon Massey <simon dot massey at prismtech dot com>
+
+        * tao/DynaicAny/DynValue_i.cpp:
+        * tests/DynValue_Test/Analyzer.cpp:
+          Missing .in () for vars.
+
 Thu Mar 1 11:45:00 UTC 2012  Simon Massey <simon dot massey at prismtech dot com>
 
         * tests/DynValue_Test/main.cpp:
